# ahoi_chatbot

./: README.md  pyproject.toml
src/: app.py  app_old.py
src/logic/: llmchain.py
